; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_uma_core.c_uma_zone_reclaim.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_uma_core.c_uma_zone_reclaim.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [33 x i8] c"unhandled reclamation request %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @uma_zone_reclaim(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  switch i32 %5, label %17 [
    i32 128, label %6
    i32 130, label %9
    i32 129, label %12
  ]

6:                                                ; preds = %2
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @zone_trim(i32 %7)
  br label %20

9:                                                ; preds = %2
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @zone_drain(i32 %10)
  br label %20

12:                                               ; preds = %2
  %13 = load i32, i32* %3, align 4
  %14 = call i32 @pcpu_cache_drain_safe(i32 %13)
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @zone_drain(i32 %15)
  br label %20

17:                                               ; preds = %2
  %18 = load i32, i32* %4, align 4
  %19 = call i32 @panic(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i32 %18)
  br label %20

20:                                               ; preds = %17, %12, %9, %6
  ret void
}

declare dso_local i32 @zone_trim(i32) #1

declare dso_local i32 @zone_drain(i32) #1

declare dso_local i32 @pcpu_cache_drain_safe(i32) #1

declare dso_local i32 @panic(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
